Wrapped KisShapeLayer in KisNodeShape, fix signals for flake

To make node add/remove signals asynchronous we need to store
shared pointer of KisShapeLayer, so lets just wrap it into the
node shape. It'll make the life of maintaining siblings data easier.

This patch fixes layer activation signals as well. See comment in
KisCanvas2::KisCanvas2.

BUG:290812